--- a/scss/custom/partials/_mtc-panels.scss
+++ b/scss/custom/partials/_mtc-panels.scss
@@ -121,6 +121,10 @@
 .panel.smokeGradient, 
 .panel.darkGradient {
   
+  p { margin-bottom: 0em; }
+  
+  .button { margin-bottom: 0em; }
+  
  span.mktoButtonWrap {
     margin: 0px auto;
     text-align: center;
